# atelier

./: .gitignore  README.md  popular_dados.py  pyproject.toml
atelier/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
atelier/migrations/: 0001_initial.py  0002_alter_produto_margem_lucro_percentual_and_more.py  0003_produto_desconto_valor.py  0004_produto_imagem_frente_produto_imagem_lado_and_more.py  0005_alter_produto_valor_hora_trabalho.py  0006_material_estoque_minimo_material_quantidade_estoque_and_more.py  0007_venda_nome_cliente.py  0008_venda_telefone_cliente_alter_venda_nome_cliente.py  0009_entradamaterial.py  0010_alter_material_unidade_medida.py  0011_alter_produto_desconto_valor_alter_produto_descricao_and_more.py  0012_categoriamaterial_material_categoria.py  0013_cliente_remove_venda_nome_cliente_and_more.py  0014_alter_produto_tempo_trabalho_horas.py  0015_alter_material_unidade_medida.py
atelier/templates/atelier/: base.html  cadastrar_categoria.html  confirmar_exclusao.html  confirmar_exclusao_produto.html  detalhe_cliente.html  detalhe_produto.html  form_cliente.html  form_material.html  form_produto.html  lista_clientes.html  lista_materiais.html  lista_produtos.html  recibo.html  registrar_entrada.html  registrar_venda.html  venda_confirmada.html
atelier/templatetags/: custom_filters.py
core/: settings.py  urls.py
tarefas/: forms.py  models.py  urls.py  views.py
tarefas/migrations/: 0001_initial.py  0002_tarefa_motivo.py
tarefas/static/css/: form.css  lista.css  style.css
tarefas/templates/Tarefas/: base.html  form.html  (+1 more)
(+4 files in other folders)
