[project]
name = "projeto-teste"
version = "0.1.0"
description = "Projeto voltado a testes"
authors = [
    {name = "Pablo Weber",email = "pablo.weber@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "pillow (>=12.1.1,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
